# cargo-7282-app

./: Cargo.toml  README.md
src/: main.rs
